# InfluxDBClient-rs

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: client.rs  error.rs  keys.rs  lib.rs  serialization.rs
tests/: client_test.rs
