[package]
name = "influx_db_client"
version = "0.5.3"
authors = ["piaoliu <441594700@qq.com>"]
documentation = "https://docs.rs/influx_db_client/"
repository = "https://github.com/driftluo/InfluxDBClient-rs"
description = "InfluxDB Rust driver"
readme = "README.md"
keywords = ["influxdb"]
categories = ["database"]
license = "MIT"
include = ["Cargo.toml", "src/*.rs", "README.md", "LICENSE"]
edition = "2018"

[badges]
travis-ci = { repository = "driftluo/InfluxDBClient-rs" }

[dependencies]
reqwest = { version = "^0.12", default-features = false, features = ["json"] }
serde_json = '^1.0.2'
serde = { version = "^1.0.15", features = ["derive"] }
bytes = "^1"
futures = "^0.3"

[dev-dependencies]
tempdir = "0.3"
tokio = { version = "1", features = ["full"] }


[features]
default = ["reqwest/default-tls"]


# For using rustls-tls (and no need for openssl anymore)
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
